All but wordlength

--- a/proj1/ngordnet/ngordnetui.config
+++ b/proj1/ngordnet/ngordnetui.config
@@ -1,4 +1,4 @@
-./ngrams/all_words.csv
-./ngrams/total_counts.csv
-./wordnet/synsets.txt
-./wordnet/hyponyms.txt
+./p1data/ngrams/all_words.csv
+./p1data/ngrams/total_counts.csv
+./p1data/wordnet/synsets.txt
+./p1data/wordnet/hyponyms.txt
